--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -159,6 +159,16 @@
                 app:layout_constraintTop_toTopOf="parent" />
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/TimeId"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/time_text"
+            android:textAlignment="center"
+            android:textSize="10sp"
+            app:layout_constraintEnd_toEndOf="@+id/Frame2"
+            app:layout_constraintTop_toBottomOf="@+id/Frame2" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
