--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,7 @@
 
             android:layout_marginTop="50dp"
             android:text="@string/current_gps_location"
+            android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -57,12 +58,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:layout_marginTop="100dp"
+            android:layout_marginTop="40dp"
             android:text="@string/get_location"
             android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
 
         <LinearLayout
@@ -80,6 +81,7 @@
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:contentDescription="@string/weather_icon"
                 android:src="@drawable/pic_01d" />
 
             <TextView
@@ -137,8 +139,8 @@
                 android:id="@+id/CurrentLonId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="0dp"
                 android:layout_marginTop="0dp"
+                android:layout_marginEnd="0dp"
                 android:padding="0dp"
                 android:text="@string/current_lon"
                 android:textAlignment="center"
@@ -166,9 +168,22 @@
             android:layout_marginTop="10dp"
             android:text="@string/time_text"
             android:textAlignment="center"
-            android:textSize="10sp"
+            android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="@+id/Frame2"
             app:layout_constraintTop_toBottomOf="@+id/Frame2" />
+
+        <Button
+            android:id="@+id/newPage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_marginTop="20dp"
+            android:text="@string/weather_in_major_cities"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/TimeId" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
